[package]
name = "inf-circle-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for Circle's API with clean separation of read and write operations"
license = "MIT"
repository = "https://github.com/example/inf-circle-sdk"
keywords = ["circle", "api", "sdk", "crypto", "blockchain"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Environment variables
dotenv = "0.15"

# Error handling
thiserror = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# URL handling
url = "2.0"
urlencoding = "2.1"

# Cryptography for RSA encryption
rsa = "0.9"
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"
hex = "0.4"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
