[package]
name = "inf-circle-sdk"
version = "0.1.1"
edition = "2021"
authors = ["Spielcrypto <fjnavarro@spielcrypto.com>"]
description = "Rust SDK for Circle's API with clean separation of read and write operations"
license = "MIT"
repository = "https://github.com/Inferenco/inf-circle-sdk"  # UPDATE THIS
homepage = "https://github.com/Inferenco/inf-circle-sdk"  
documentation = "https://docs.rs/inf-circle-sdk"              
readme = "README.md"                                          
keywords = ["circle", "api", "sdk", "crypto", "blockchain"]
categories = ["api-bindings", "web-programming::http-client"]

# Optional but recommended
exclude = [
    "target/*",
    ".env",
    ".git*",
]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.12.23", features = ["json"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Environment variables
dotenv = "0.15"

# Error handling
thiserror = "2.0.17"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# URL handling
url = "2.0"
urlencoding = "2.1"

# Cryptography for RSA encryption
rsa = "0.9"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
anyhow = "1.0"

# Borsh + base58 for NEAR DelegateAction encoding
borsh = { version = "1", features = ["derive"] }
bs58 = "0.5"

# NEAR official types (ensures correct serialization)
near-primitives = "0.32.0"
near-crypto = "0.32.0"


[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
